--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -7,7 +7,8 @@
         <item
             android:id="@+id/nav_search"
             android:icon="@drawable/ic_search"
-            android:title="@string/menu_search" />
+            android:title="@string/menu_search"
+            />
 
         <item
             android:id="@+id/nav_groups"
@@ -17,7 +18,6 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/menu_home"
-            android:checked="true"
             />
         <item
             android:id="@+id/nav_settings"
