--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -20,6 +20,11 @@
             android:title="@string/menu_home"
             />
         <item
+            android:id="@+id/nav_map"
+            android:icon="@drawable/ic_place_black_24dp"
+            android:title="@string/menu_map"
+            />
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/menu_settings" />
