--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -66,7 +66,8 @@
         android:label="fragment_map"
         tools:layout="@layout/fragment_map" >
         <argument android:name="post"
-            app:argType="com.instagramy.models.Post" />
+            app:argType="com.instagramy.models.Post"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
@@ -149,5 +150,6 @@
         app:enterAnim="@anim/nav_default_enter_anim"
         app:exitAnim="@anim/nav_default_exit_anim"
         app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        app:popExitAnim="@anim/nav_default_pop_exit_anim"
+        app:popUpTo="@+id/homeFragment" />
 </navigation>
