--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -109,8 +109,8 @@
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" >
         <argument
-            android:name="Profile"
-            app:argType="com.instagramy.models.Profile" />
+            android:name="ProfileId"
+            app:argType="string" />
         <action
             android:id="@+id/action_profileFragment_to_groupDetailsFragment"
             app:destination="@+id/groupDetailsFragment"
