--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -46,7 +46,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="196dp"
             android:layout_marginEnd="8dp"
-            android:text="GPS"
+            android:text="Show my location on post"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/user_img_profile" />
