--- a/app/src/main/res/layout/row_pos_item.xml
+++ b/app/src/main/res/layout/row_pos_item.xml
@@ -37,6 +37,7 @@
         app:layout_constraintBottom_toTopOf="@+id/row_post_img"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
