--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -11,9 +11,9 @@
             />
 
         <item
-            android:id="@+id/nav_groups"
-            android:icon="@drawable/ic_group_black_24dp"
-            android:title="@string/menu_groups"
+            android:id="@+id/nav_favorites"
+            android:icon="@drawable/ic_favorite_svgrepo_com"
+            android:title="@string/menu_favorites"
             />
         <item
             android:id="@+id/nav_home"
