--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff6000</color>
-    <color name="colorPrimaryDark">#d85100</color>
+    <color name="colorPrimary">#ffc300</color>
+    <color name="colorPrimaryDark">#e3ae00</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorLightGray">#B9B9B9</color>
