--- a/app/src/main/res/layout/row_pos_item.xml
+++ b/app/src/main/res/layout/row_pos_item.xml
@@ -102,4 +102,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.509" />
 
+    <ProgressBar
+        android:id="@+id/row_post_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/row_post_img"
+        app:layout_constraintTop_toTopOf="@+id/row_post_img" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
