--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -6,8 +6,8 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_search"
-            android:icon="@drawable/ic_search"
-            android:title="@string/menu_search"
+            android:icon="@drawable/ic_user_secret_solid"
+            android:title="@string/menu_my_posts"
             />
 
         <item
