--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,8 +17,7 @@
             android:layout_height="match_parent"
             android:background="#fafafa"
             android:gravity="center"
-            android:orientation="vertical"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:orientation="vertical">
 
 
             <ImageView
