--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -13,11 +13,12 @@
 
         <Button
             android:id="@+id/logout_btn"
-            android:layout_width="120dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
+            android:drawableLeft="@drawable/ic_logout_sign"
             android:text="Logout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -26,11 +27,12 @@
 
         <Button
             android:id="@+id/about_btn"
-            android:layout_width="120dp"
+            android:layout_width="180dp"
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
+            android:drawableLeft="@drawable/ic_about_circle"
             android:text="About"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -39,11 +41,12 @@
 
         <Button
             android:id="@+id/edit_profile_btn"
-            android:layout_width="120dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="100dp"
             android:layout_marginEnd="8dp"
+            android:drawableLeft="@drawable/ic_account_circle"
             android:text="Edit Profile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
