--- a/app/src/main/res/layout/row_pos_item.xml
+++ b/app/src/main/res/layout/row_pos_item.xml
@@ -125,4 +125,15 @@
         app:layout_constraintStart_toStartOf="@+id/row_post_img"
         app:layout_constraintTop_toTopOf="@+id/row_post_img" />
 
+    <TextView
+        android:id="@+id/row_post_image_error_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Opps! Can't load Image :("
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/row_post_img"
+        app:layout_constraintStart_toStartOf="@+id/row_post_img"
+        app:layout_constraintTop_toTopOf="@+id/row_post_img" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
